Fixed classnames and add error handler for fatch.

--- a/src/components/Dialog/Dialog.scss
+++ b/src/components/Dialog/Dialog.scss
@@ -37,12 +37,12 @@
     margin-top: 50px;
     margin-bottom: 50px;
 
-    div {
+    .icon-container {
       display: flex;
       flex-direction: row;
     }
 
-    img {
+    .img {
       position: absolute;
     }
 
