--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,12 +1,12 @@
 .search-wrapper {
   position: relative;
-  img {
+  .img {
     position: absolute;
     right: 22px;
     top: 28px;
   }
 
-  input {
+  .input {
     border: none;
     width: 600px;
     height: 80px;
