--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
 
-    h1 {
+    .title {
       font-size: 72px;
       font-family: 'Roboto', sans-serif;
     }
